# max-s-bundle

./: BP-COLOR.cpp  BP.cpp  BiBr.cpp  CMakeLists.txt  F-appendix-dimacs2.xlsx  F-rt-snap-dim10.xlsx  F-ub-compare.xlsx  MB-COLOR.cpp  MB.cpp  MSB.cpp  MSB_IEframework.cpp  MSB_liuyang.cpp  MuBr+Color.cpp  MuBr.cpp  README.md  compare.xlsx  email-Eu-core.txt  rds-sbundle.cpp  rt-dimacs2.xlsx  rt-random.xlsx  rt-snap-dim10.xlsx
